--- a/index.html
+++ b/index.html
@@ -33,25 +33,27 @@ body {
   flex-direction: column;
   align-items: center;
   margin-bottom: 24px;
-  animation: popIn 1s ease;
+  animation: popIn 1.5s ease;
 }
 #banner img {
-  width: 100px;
+  width: 220px;                /* 🎂 to hơn */
   height: auto;
-  border-radius: 50%;
-  box-shadow: 0 0 12px rgba(255,255,255,0.6);
-  margin-bottom: 10px;
+  border-radius: 50% / 35%;    /* hình oval như tấm bạn gửi */
+  box-shadow: 0 0 25px rgba(255,255,255,0.8);
+  margin-bottom: 20px;
+  animation: cakePop 1.5s ease;
 }
-@keyframes popIn {
-  0% { transform: scale(0.7); opacity: 0; }
+@keyframes cakePop {
+  0% { transform: scale(0.5); opacity: 0; }
   100% { transform: scale(1); opacity: 1; }
 }
 
 #banner h1 {
-  font-size: 28px;
+  font-size: 30px;
   color: #ff1493;
   text-shadow: 1px 1px 2px #fff;
   font-weight: bold;
+  animation: fadeIn 2s ease;
 }
 
 #password {
